guessing game complete

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Class 02: Guessing Game</title>
     <!-- Links CSS -->
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- FontAwesome Icons -->
     <script src="https://kit.fontawesome.com/004ffe82fe.js" crossorigin="anonymous"></script>
