guessing game class03 update

--- a/index.html
+++ b/index.html
@@ -18,26 +18,54 @@
         </h1>
     </header>
     <main>
-        <section class="biography">
+        <section class="biography-container">
             <h2>About James Ian Solima</h2>
-            <p>
-                My name is James Ian Solima. If you're reading this, you have failed the game or are not ready to play
-                the game yet or you just want to learn more about me. When you're ready to start the game, press refresh
-                on the browser or F5
-            </p>
+            <section class="quick-bio-section">
+                <p>
+                    My name is James Ian Solima. If you're reading this, you have failed the game or are not ready to
+                    play
+                    the game yet or you just want to learn more about me. When you're ready to start the game, press
+                    refresh
+                    on the browser or F5
+                </p>
+                <br>
+                <p>
+                    I am currently <strong>31 years old</strong> and have many interests such as cooking, traveling,
+                    anime,
+                    video games, table top rpg's and music. I am obsessed with cyberpunk dystopian worlds and one of my
+                    <strong>favorite animals is an octopus</strong> and one of my <strong>favorite foods is
+                        sushi.</strong>
+                    One of my main goals is to become a <strong>Full Stack Developer.</strong> In turn I hope that this
+                    will
+                    fulfill all my other goals such as gaining meaningful employment, having a flexible schedule and
+                    making
+                    a comfortable salary.
+                </p>
+            </section>
+
+            <hr>
+            <section class="professional-exp-section">
+                <ul>Professional Experience:
+                    <li>L2 Application Production Support, BofA 2020-2022</li>
+                    <li>Full Stack Developer, HubLink, inc. 2020-2020</li>
+                    <li>Diesel Mecahnic, Army & Army NG, 2011-2021</li>
+                </ul>
+            </section>
             <br>
-            <p>
-                I am currently <strong>31 years old</strong> and have many interests such as cooking, traveling, anime,
-                video games, table top rpg's and music. I am obsessed with cyberpunk dystopian worlds and one of my
-                <strong>favorite animals is an octopus</strong> and one of my <strong>favorite foods is sushi.</strong>
-                <br>
-                Professionally I am an Army veteran with 10 years of service and my most recent role was as a contracted
-                <strong>L2 Application Production Support for Bank of America</strong>.
-                <br>
-                One of my main goals is to become a <strong>Full Stack Developer.</strong> In turn I hope that this will
-                fulfill all my other goals such as gaining meaningful employment, having a flexible schedule and making
-                a comfortable salary.
-            </p>
+            <section class="top-ten-section">
+                <ol> My favorite Anime Shows watched in 2022
+                    <li>Chainsaw Man</li>
+                    <li>Spy x Family</li>
+                    <li>Attack on Titan</li>
+                    <li>Jujutsu Kaisen</li>
+                    <li>Erased</li>
+                    <li>Cyberpunk: Edgerunners</li>
+                    <li>Demon Slayer</li>
+                    <li>Dr. Stone</li>
+                    <li>Kotaro Lives Alone</li>
+                    <li>Tokyo Revengers</li>
+                </ol>
+            </section>
         </section>
     </main>
     <footer>
