completed guessing game lab03

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- FontAwesome Icons -->
     <script src="https://kit.fontawesome.com/004ffe82fe.js" crossorigin="anonymous"></script>
+    <!-- Links JS  -->
+    <script type="text/javascript" src="js/app.js"></script>
 </head>
 
 <body>
@@ -42,7 +44,8 @@
                     a comfortable salary.
                 </p>
             </section>
-
+            <br>
+            <input type="button" id="load-js" onclick="btnClick()" value="Start Guessing Game!">
             <hr>
             <section class="professional-exp-section">
                 <ul>Professional Experience:
@@ -77,8 +80,7 @@
         <p>© Copyright 2023 James Solima</p>
     </footer>
 
-    <!-- Links JS  -->
-    <script src="js/app.js"></script>
+
 </body>
 
 </html>
