easter egg button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="full-width">
-        <h1><i class="fa-solid fa-circle-question"></i>
+        <h1><i button onclick="easterEgg()" id="button" class="fa-solid fa-circle-question"></i>
             Class 02: Guessing Game
             <i class="fa-solid fa-circle-question"></i>
         </h1>
