final about me guessing game

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     play the game yet or you just want to learn more about me. When you're ready to start the game,
                     press
                     refresh
-                    on the browser or F5
+                    on the browser or F5.<br>
+                    btw. There's an easter egg on this page, see if you can find it. ;)
                 </p>
                 <br>
                 <p>
@@ -53,7 +54,7 @@
             </section>
             <br>
             <input type="button" id="load-js" onclick="btnClick()" value="Start Guessing Game!">
-            
+
             <section class="list-container">
                 <section class="professional-exp-section">
                     <ul>Professional Experience:
